gcc/testsuite/g++.dg/parse/crash39.C
// PR c++/31747

static extern int i; // { dg-error "conflicting specifiers" }
